public/examples/errors/gop_without_tag.gop
fmt.Println("This GOP file is missing the <!go tag")